--- a/Views/Products.xaml
+++ b/Views/Products.xaml
@@ -1,11 +1,11 @@
-﻿<Window x:Class="np_project.Views.Window1"
+﻿<Window x:Class="np_project.Views.Products"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:np_project.Views"
         mc:Ignorable="d"
-        Title="Productos" Height="450" Width="800"
+        Title="Products" Height="450" Width="800"
         Background="#F1F1F1">
 
     <Grid>
