--- a/Views/login.xaml
+++ b/Views/login.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="np_project.Views.login"
+﻿<Window x:Class="np_project.Views.Login"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
