<Add new view "User"

--- a/App.xaml
+++ b/App.xaml
@@ -7,7 +7,9 @@
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="/Resources/Styles/MenuButtonStyles.xaml"/>
+                <ResourceDictionary Source="/Resources/Styles/AddButton.xaml"/>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
+    
 </Application>
