--- a/Views/user.xaml
+++ b/Views/user.xaml
@@ -1,11 +1,11 @@
-﻿<Window x:Class="np_project.Views.Window1"
+﻿<Window x:Class="np_project.Views.User"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:np_project.Views"
         mc:Ignorable="d"
-        Title="Main" Height="450" Width="800"
+        Title="User" Height="450" Width="800"
         Background="#F1F1F1">
 
     <Grid>
@@ -23,7 +23,6 @@
             <Border Grid.Column="0"
                 Background="White"
                 Margin="10,8,0,15"
-                    
                 CornerRadius="10">
                 <Border.Effect>
                     <DropShadowEffect Color="Black" BlurRadius="10" ShadowDepth="2" Opacity="0.3"/>
@@ -73,12 +72,54 @@
                 </StackPanel>
             </Border>
             <Border Grid.Column="1" 
-                    Background="#F1F1F1" 
-                    Margin="10">
-                <Image Source="/Resources/Images/DashBoard.png" 
-                   Width="Auto" 
-                   Height="Auto" 
-                   Margin="0,0,8,0"/>
+                    Background= "White"
+                    Margin="10"
+                    CornerRadius="10">
+                <Border.Effect>
+                    <DropShadowEffect Color="Black" BlurRadius="10" ShadowDepth="2" Opacity="0.3"/>
+                </Border.Effect>
+                <StackPanel>
+                    <Grid>
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="40"/>
+                            <RowDefinition Height="25"/>
+                        </Grid.RowDefinitions>
+
+                        <Grid Grid.Row="0">
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="300"/>
+                                <ColumnDefinition Width="50"/>
+                            </Grid.ColumnDefinitions>
+                        </Grid>
+
+                        <Grid Grid.Row="1" Background="LightGray">
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="50"/>
+                                <ColumnDefinition Width="150"/>
+                                <ColumnDefinition Width="100"/>
+                                <ColumnDefinition Width="100"/>
+                                <ColumnDefinition Width="100"/>
+                            </Grid.ColumnDefinitions>
+
+                        </Grid>
+
+                        <TextBlock Text="Usuarios" FontWeight="Bold" FontSize="18" VerticalAlignment="Center" HorizontalAlignment="Left" Margin="10,0,0,0"/>
+                        <Button Grid.Row="0" Grid.Column="1"  x:Name="AddButton" Style="{StaticResource AddButtonStyle}">
+                            <StackPanel Orientation="Horizontal">
+                                <Image Source="/Resources/Icons/add.png" Width="10" Height="15" Margin="0,0,5,0"/>
+                                <TextBlock Text="Agregar" VerticalAlignment="Center"/>
+                            </StackPanel>
+                        </Button>
+                        
+                        <Label Grid.Row="1" Grid.Column="0" Content="ID" FontWeight="Bold" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="10,0,0,0"/>
+                        <Label Grid.Row="1" Grid.Column="1" Content="Nombre" FontWeight="Bold" VerticalAlignment="Center" Margin="100,0,0,0"/>
+                        <Label Grid.Row="1" Grid.Column="2" Content="Tipo" FontWeight="Bold" VerticalAlignment="Center" Margin="300,0,0,0"/>
+                        <Label Grid.Row="1" Grid.Column="2" Content="Estado" FontWeight="Bold" VerticalAlignment="Center" Margin="400,0,0,0"/>
+                        
+                    </Grid>
+                    
+                    <Rectangle Height="1" Fill="Black" Margin="0,0,0,10"/>
+                </StackPanel>
             </Border>
         </Grid>
 
