--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -3,8 +3,21 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:np_project"
-        Title="Mainwindws" Height="450" Width="800">
+        xmlns:views="clr-namespace:np_project.Views"
+        xmlns:shared="clr-namespace:np_project.Views.Shared"
+        Title="Project" Height="auto" Width="auto">
+    <Grid>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="170"/>
+            <ColumnDefinition Width="*"/>
+        </Grid.ColumnDefinitions>
+
+        <!-- Sidebar -->
+        <shared:Sidebar Grid.Column="0" />
+
+        <!-- Vista actual -->
+        <ContentControl Grid.Column="1" Content="{Binding CurrentView}" />
+    </Grid>
     
 </Window>
         
