--- a/Views/Home.xaml
+++ b/Views/Home.xaml
@@ -1,13 +1,12 @@
-﻿<UserControl x:Class="np_project.Views.Orders"
+﻿<UserControl x:Class="np_project.Views.Home"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:np_project.Views"
-        xmlns:shared="clr-namespace:np_project.Views.Shared"
         mc:Ignorable="d"
-        Height="450" Width="800"
-        Background="#F1F1F1">
+        Background="#F1F1F1"
+        Height="auto" Width="auto">
 
     <Grid>
         <Grid.RowDefinitions>
@@ -16,24 +15,14 @@
         </Grid.RowDefinitions>
 
         <Grid Grid.Row="1">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="170"/>
-                <ColumnDefinition Width="*"/>
-            </Grid.ColumnDefinitions>
 
-            <!-- Asegúrate de que el archivo Sidebar.xaml existe en la carpeta Views/Shared
-                 y que la clase Sidebar está declarada como public en el code-behind.
-                 Si Sidebar no existe, crea el archivo y la clase correspondiente. -->
-            <shared:Sidebar Grid.Column="0" />
-            
             <Border Grid.Column="1" 
                     Background="#F1F1F1" 
                     Margin="10">
-                <Image Source="/Resources/Images/Sales.png" 
+                <Image Source="/Resources/Images/DashBoard.png" 
                    Width="Auto" 
                    Height="Auto" 
-                   Margin="0,0,8,0"
-                   VerticalAlignment="Top"/>
+                   Margin="0,0,8,0"/>
             </Border>
         </Grid>
 
