--- a/Views/Reports.xaml
+++ b/Views/Reports.xaml
@@ -1,11 +1,11 @@
-﻿<Window x:Class="np_project.Views.Reports"
+﻿<UserControl x:Class="np_project.Views.Reports"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:np_project.Views"
         mc:Ignorable="d"
-        Title="Reports" Height="450" Width="800"
+        Height="450" Width="800"
         Background="#F1F1F1">
 
     <Grid>
@@ -94,4 +94,4 @@
             </StackPanel>
         </Border>
     </Grid>
-</Window>
+</UserControl>
