--- a/App.xaml
+++ b/App.xaml
@@ -1,7 +1,9 @@
 ﻿<Application x:Class="np_project.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:np_project">
+             xmlns:local="clr-namespace:np_project"
+             StartupUri="MainWindow.xaml">>
+    
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
