--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -1,12 +1,35 @@
 ﻿<Window x:Class="np_project.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        Title="Project" Height="auto" Width="auto">
-    <Grid>
+        xmlns:vm="clr-namespace:np_project.ViewModels"
+        xmlns:views="clr-namespace:np_project.Views"
+        Title="Main" Height="auto" Width="auto">
 
-    </Grid>
-    
+    <Window.DataContext>
+        <vm:MainWindowViewModel />
+    </Window.DataContext>
+
+    <DockPanel>
+        <StackPanel DockPanel.Dock="Left" Width="200" Background="#EEE">
+            <Button Content="Inicio" Command="{Binding NavigateToHomeCommand}" Margin="0,0,0,8"/>
+            <Button Content="Usuarios" Command="{Binding NavigateToUsersCommand}" Margin="0,0,0,8"/>
+            <Button Content="Pedidos" Command="{Binding NavigateToOrdersCommand}" Margin="0,0,0,8"/>
+        </StackPanel>
+
+        <!-- Contenedor dinámico -->
+        <ContentControl Content="{Binding CurrentViewModel}">
+            <ContentControl.Resources>
+                <DataTemplate DataType="{x:Type vm:HomeViewModel}">
+                    <views:HomeView />
+                </DataTemplate>
+                <DataTemplate DataType="{x:Type vm:UsersViewModel}">
+                    <views:UsersView />
+                </DataTemplate>
+                <DataTemplate DataType="{x:Type vm:OrdersViewModel}">
+                    <views:OrdersView />
+                </DataTemplate>
+            </ContentControl.Resources>
+        </ContentControl>
+    </DockPanel>
 </Window>
         
