--- a/Views/LoginWindow.xaml
+++ b/Views/LoginWindow.xaml
@@ -5,7 +5,7 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:np_project.Views"
       mc:Ignorable="d"
-      Title="Login" Height="auto" Width="auto">
+      Title="Login" Height="auto" Width="auto" WindowStartupLocation="CenterScreen">
 
     <Grid Margin="20">
         <StackPanel>
@@ -16,6 +16,7 @@
             <PasswordBox x:Name="PasswordBox" PasswordChanged="PasswordBox_PasswordChanged" Margin="0,4,0,10"/>
             
             <Button Content="Iniciar Sesión" Command="{Binding LoginCommand}" Height="32"/>
+            <TextBlock Text="{Binding ErrorMessage}" Foreground="Red" Margin="0,10,0,0"/>
         </StackPanel>
     </Grid>
 </Window>
