--- a/Views/MainWindow.xaml
+++ b/Views/MainWindow.xaml
@@ -1,9 +1,9 @@
-﻿<Window x:Class="np_project.MainWindow"
+﻿<Window x:Class="np_project.Views.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:vm="clr-namespace:np_project.ViewModels"
         xmlns:views="clr-namespace:np_project.Views"
-        Title="Main" Height="auto" Width="auto">
+        Title="Main" Height="auto" Width="auto" WindowStartupLocation="CenterScreen">
 
     <Window.DataContext>
         <vm:MainWindowViewModel />
