--- a/App.xaml
+++ b/App.xaml
@@ -1,12 +1,23 @@
 ﻿<Application x:Class="np_project.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:views="clr-namespace:np_project.Views"
+             xmlns:vm="clr-namespace:np_project.ViewModels"
              xmlns:local="clr-namespace:np_project">
 
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
             </ResourceDictionary.MergedDictionaries>
+            <DataTemplate DataType="{x:Type vm:HomeViewModel}">
+                <views:HomeView />
+            </DataTemplate>
+            <DataTemplate DataType="{x:Type vm:UsersViewModel}">
+                <views:UsersView />
+            </DataTemplate>
+            <DataTemplate DataType="{x:Type vm:OrdersViewModel}">
+                <views:OrdersView />
+            </DataTemplate>
         </ResourceDictionary>
     </Application.Resources>
     
