--- a/Views/UsersView.xaml
+++ b/Views/UsersView.xaml
@@ -1,7 +1,26 @@
 ﻿<UserControl x:Class="np_project.Views.UsersView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-    <Grid>
-        <TextBlock Text="{Binding Title}" FontSize="22" VerticalAlignment="Center" HorizontalAlignment="Center"/>
-    </Grid>
+
+    <DockPanel Margin="10">
+        <StackPanel DockPanel.Dock="Top" Orientation="Horizontal" Margin="0 0 0 10">
+            <Button Content="Nuevo" Command="{Binding OpenCreateUserCommand}" Margin="5"/>
+            <Button Content="Editar" Command="{Binding OpenEditUserCommand}" Margin="5"/>
+            <Button Content="Eliminar" Command="{Binding DeleteUserCommand}" Margin="5"/>
+            <Button Content="Activar" Command="{Binding ActiveUserCommand}" Margin="5"/>
+        </StackPanel>
+        <DataGrid ItemsSource="{Binding Users}" 
+                  SelectedItem="{Binding SelectedUser}" 
+                  AutoGenerateColumns="False"
+                  CanUserAddRows="False"
+                  IsReadOnly="True">
+            <DataGrid.Columns>
+                <DataGridTextColumn Header="ID" Binding="{Binding Id}" IsReadOnly="True"/>
+                <DataGridTextColumn Header="DNI" Binding="{Binding Dni}"/>
+                <DataGridTextColumn Header="Nombre" Binding="{Binding Name}"/>
+                <DataGridTextColumn Header="Rol" Binding="{Binding Role}"/>
+                <DataGridTextColumn Header="Estado" Binding="{Binding isActive}"/>
+            </DataGrid.Columns>
+        </DataGrid>
+    </DockPanel>
 </UserControl>
